# pyreinfolib

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: release-please-config.json
.github/workflows/: publish.yml  release-please.yml
pyreinfolib/: __init__.py  client.py  enums.py
tests/: test_client.py
