[project]
name = "pyreinfolib"
description = "Python client for Real Estate Information Library APIs"
authors = [
    { name = "matsudan", email = "daaamatsun@gmail.com" }
]
dynamic = ["version"]
dependencies = [
    "requests",
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["real-estate", "api", "client"]

[project.urls]
Homepage = "https://github.com/matsudan/pyreinfolib"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pyreinfolib"]

[tool.hatch.version]
path = "pyreinfolib/__init__.py"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
    "ruff>=0.12.12",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "Q", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "-v --cov=pyreinfolib --cov-branch"
